--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,9 @@
-
 // Variables
 @import 'variables';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+@import "~select2/src/scss/core";
+@import "~@ttskch/select2-bootstrap4-theme/src/layout";
 
 @import 'header';
